--- a/index.css
+++ b/index.css
@@ -97,8 +97,8 @@ footer i:focus {
 }
 
 form {
-    /* display: flex;
-    flex-direction: row; */
+    display: flex;
+    flex-direction: row;
 }
 
 input {
