--- a/index.css
+++ b/index.css
@@ -43,20 +43,17 @@ h2 {
     font-size: 14px;
     font-weight: 400;
     color: var(--very-dark-blue);
-    margin-top: 25px;
+    margin-top: 20px;
+    margin-bottom: 35px;
 }
 
 button {
     background-color: var(--blue);
-    width: 300px;
     color: white;
     padding: 15px 30px;
     border-radius: 30px;
     border: 1px solid var(--blue);
-    /* box-shadow: 2px 2px 4px rgba(31, 58, 102, 1); */
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-    /* margin-top: 50px; */
-    margin-bottom: 85px;
 }
 
 button:hover,
@@ -66,6 +63,10 @@ button:focus {
 
 footer i {
     color: var(--blue);
+    margin-right: 30px;
+    border-radius: 50%;
+    border: 1px solid var(--pale-blue);
+    padding: 5px;
 }
 
 footer i:hover,
@@ -74,41 +75,36 @@ footer i:focus {
     color: white;
     cursor: pointer;
     border-radius: 50%;
-    /* padding: 1px; */
 }
 
 
 /* Layout */
 
 .logo {
-    /* width: 2em; */
     height: 1px;
-    /* width: 5%; */
 }
 
 .container {
     text-align: center;
     padding: 2em;
     margin-top: 50px;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
 }
 
-form {
-    /* display: flex;
-    flex-direction: row; */
+#form {
+    display: grid;
+    max-width: 100%;
+    grid-gap: 5px;
 }
 
 input {
-    margin-top: 45px;
-    width: 300px;
-    /* color: var(--pale-blue); */
     padding: 15px 30px;
     border-radius: 30px;
     border: 1px solid var(--pale-blue);
-    margin-bottom: 15px;
+    width: 300px;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -133,12 +129,65 @@ input {
     color: var(--pale-blue);
 }
 
+.error {
+    color: red;
+}
+
 .dashboard {
-    /* width: 100%; */
-    /* width: 310px; */
-    width: 110%;
+    width: 100%;
+    margin-top: 65px;
+    margin-bottom: 80px;
 }
 
 footer {
     text-align: center;
+}
+
+footer p {
+    margin-top: 35px;
+    margin-bottom: 55px;
+}
+
+
+
+@media only screen and (min-width: 629px) {
+
+    h1 {
+        font-weight: 300;
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 18px;
+        font-weight: 400;
+    }
+    
+    #form {
+        grid-template-columns: 2fr 1fr;
+        grid-gap: 15px;
+    }
+
+    input {
+        width: 400px;
+    }
+
+    .error {
+        grid-row: 2;
+    }
+
+    .dashboard {
+        width: 600px;
+    }
+}
+
+
+@media only screen and (max-width: 349px) {
+
+    input {
+        width: 200px;
+    }
+
+    .dashboard {
+        width: 90%;
+    }
 }
